--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@
 .image-container {
   position: relative;
   display: inline-block;
+  
 }
 
 .image-container img {
   width: 100%;
   height: auto;
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .content {
@@ -22,7 +25,8 @@
   color:  black;
   display: flex;
   flex-direction: column;
-
+  max-width: 1170px;
+  width: 100%;
 }
 
 .content h1 {
@@ -72,7 +76,7 @@
   background-color: rgb(220, 235, 157);
 }
 .butoni {
-  
+  padding-left: 100px;
   display: flex;
   float: right;
 }
@@ -81,23 +85,26 @@ background-color: blue;
 }
 .container {
   display: flex;
-  
+max-width: 1170px;
+width: 100%;
+ 
   
 }
 form {
-  width: 1050px;
   height: 35px;
   display: flex;
-  margin-left: 300px;
+  margin-left: 400px;
   padding-top: 24px;
 }
-form input{
+form input{ 
   flex: 1;
   border: none;
   outline: nones;
   border-radius: 30px;
   font-size: 18px;
-  padding-left: 30px;
+  padding-right: 180px;
+  padding-left: 15px;
+  width: 300px ;
 }
 nav {
   text-decoration: none;
